--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -557,7 +557,29 @@
           </div>
         </div>
       </section>
-      <load src="./components/cta.html" />
+
+      <section class="cta section">
+        <div class="container">
+          <div class="cta__content">
+            <h2 class="cta__title">
+              Turn Your Vision into a&nbsp;<span class="text-color">Digital Masterpiece!</span>
+            </h2>
+            <p class="cta__description p-1">
+              Our team is here to shape your ideas into exceptional digital experiences.
+            </p>
+            <div class="section__action cta__action">
+              <a href="#" class="btn btn_primary-green">
+                <span class="btn__icon icon-calendar"></span>
+                <span class="btn__text">Schedule a Meeting</span>
+              </a>
+              <button class="btn btn_secondary cta__btn">
+                <span class="btn__text">Request Consultation</span>
+                <span class="btn__icon icon-arrow-right"> </span>
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <load src="./components/footer.html" />
