--- a/src/services.html
+++ b/src/services.html
@@ -537,7 +537,24 @@
         });
       </script>
 
-      <load src="./components/cta.html" />
+      <section class="cta section">
+        <div class="container">
+          <div class="cta__content">
+            <h2 class="cta__title">Excited to Bring <span class="text-color">Your Vision</span> to Life?</h2>
+            <p class="cta__description p-1">Let’s build a product that perfectly reflects your vision and goals.</p>
+            <div class="section__action cta__action">
+              <a href="#" class="btn btn_primary-green">
+                <span class="btn__icon icon-calendar"></span>
+                <span class="btn__text">Schedule a Meeting</span>
+              </a>
+              <button class="btn btn_secondary cta__btn">
+                <span class="btn__text">Request Consultation</span>
+                <span class="btn__icon icon-arrow-right"> </span>
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <load src="./components/footer.html" />
