--- a/src/about.html
+++ b/src/about.html
@@ -242,7 +242,24 @@
         </div>
       </section>
 
-      <load src="./components/cta.html" />
+      <section class="cta section">
+        <div class="container">
+          <div class="cta__content">
+            <h2 class="cta__title">Unlock the <span class="text-color">Power</span> of Imagination!</h2>
+            <p class="cta__description p-1">We’re here to turn your boldest concepts into stunning digital designs.</p>
+            <div class="section__action cta__action">
+              <a href="#" class="btn btn_primary-green">
+                <span class="btn__icon icon-calendar"></span>
+                <span class="btn__text">Schedule a Meeting</span>
+              </a>
+              <button class="btn btn_secondary cta__btn">
+                <span class="btn__text">Request Consultation</span>
+                <span class="btn__icon icon-arrow-right"> </span>
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <load src="./components/request_popup.html" />
