--- a/src/contact-us.html
+++ b/src/contact-us.html
@@ -27,7 +27,7 @@
               <ul class="contacts__list">
                 <li class="contacts__item">
                   <span class="icon-sms icon"></span>
-                  <a id="email-address" class="p-1" href="mailto:hello@mfisher.com">hello@mfisher.com</a>
+                  <a id="email-address" class="p-1" href="mailto:hello@mfisher.agency">hello@mfisher.agency</a>
                   <span id="email-copy" class="icon-copy icon_primary" onclick="copyEmail()"></span>
                 </li>
                 <li class="contacts__item">
