--- a/src/contact-us.html
+++ b/src/contact-us.html
@@ -43,7 +43,7 @@
 
               <ul class="social__list">
                 <li class="social__item">
-                  <a href="https://dribble.com" class="social__link">
+                  <a href="https://dribbble.com" class="social__link">
                     <span class="social__icon icon-dribbble"></span>
                   </a>
                 </li>
