--- a/src/index.html
+++ b/src/index.html
@@ -423,14 +423,31 @@
                     />
                     <img src="./assets/img/portfolio/p-t-1.jpg" alt="project" />
                   </picture>
+                  <div class="cases__item-info">
+                    <h5 class="cases__item-name">Sanodoc</h5>
+                    <ul class="tag__list">
+                      <li class="tag__item p-3">80 hours</li>
+                      <li class="tag__item p-3">Healthcare</li>
+                      <li class="tag__item p-3">CRM</li>
+                      <li class="tag__item p-3">Mobile App</li>
+                    </ul>
+                  </div>
                 </div>
-                <div class="cases__item-info">
-                  <h4 class="cases__item-name">Sanodoc</h4>
-                  <ul class="tag__list">
-                    <li class="tag__item p-3">80 hours</li>
-                    <li class="tag__item p-3">Healthcare</li>
-                    <li class="tag__item p-3">CRM</li>
-                    <li class="tag__item p-3">Mobile App</li>
+                <div class="cases__item-content">
+                  <div class="cases__item-header">
+                    <h5 class="cases__item-title">Sanodoc</h5>
+                  </div>
+                  <ul class="cases__item-body">
+                    <li class="p-2">
+                      The Israel Broadcast TV app provides live and on-demand access to top Israeli channels, available
+                      on mobile, TV, and web platforms.The Israel Broadcast TV app provides live and on-demand access to
+                      top Israe
+                    </li>
+
+                    <li class="p-2">
+                      li channels, available on mobile, TV, and web platforms.The Israel Broadcast TV app provides live
+                      and on-demand access to top Israeli channels, available on mobile, TV, and web platforms.
+                    </li>
                   </ul>
                 </div>
               </li>
@@ -451,15 +468,35 @@
                     />
                     <img src="./assets/img/portfolio/p-t-2.jpg" alt="project" />
                   </picture>
+                  <div class="cases__item-info">
+                    <h5 class="cases__item-name">Tenex</h5>
+                    <ul class="tag__list">
+                      <li class="tag__item p-3">3+ months</li>
+                      <li class="tag__item p-3">CRM</li>
+                      <li class="tag__item p-3">Mobile App</li>
+                      <li class="tag__item p-3">Web Design</li>
+                      <li class="tag__item p-3">Redesign</li>
+                    </ul>
+                  </div>
                 </div>
-                <div class="cases__item-info">
-                  <h4 class="cases__item-name">Tenex</h4>
-                  <ul class="tag__list">
-                    <li class="tag__item p-3">65 hours</li>
-                    <li class="tag__item p-3">Real estate</li>
-                    <li class="tag__item p-3">CRM</li>
-                    <li class="tag__item p-3">Mobile App</li>
-                    <li class="tag__item p-3">Web Design</li>
+                <div class="cases__item-content">
+                  <div class="cases__item-header">
+                    <h5 class="cases__item-title">Tenex</h5>
+                  </div>
+                  <ul class="cases__item-body">
+                    <li class="p-2">
+                      We developed a comprehensive solution for Tenex, encompassing a mobile application, CRM platform,
+                      and website tailored to streamline real estate and hospitality operations.
+                    </li>
+                    <li class="p-2">
+                      The system includes distinct roles for users and property owners, offering tools for property
+                      management, tenant engagement, facility oversight, and real estate accounting.
+                    </li>
+                    <li class="p-2">
+                      customization while maintaining a modern, user-friendly interface. Delivered with a focus on
+                      functionality and scalability, this project reflects our commitment to creating professional
+                      solutions tailored to industry-specific needs.
+                    </li>
                   </ul>
                 </div>
               </li>
@@ -487,16 +524,18 @@
                     />
                     <img src="./assets/img/portfolio/p-t-3.jpg" alt="project" />
                   </picture>
-                </div>
-                <div class="cases__item-info">
-                  <h4 class="cases__item-name">Israel TV</h4>
-                  <ul class="tag__list">
-                    <li class="tag__item p-3">6+ months</li>
-                    <li class="tag__item p-3">TV Broadcasting</li>
-                    <li class="tag__item p-3">TV APP Design</li>
-                    <li class="tag__item p-3">Web Design</li>
-                    <li class="tag__item p-3">Mobile App</li>
-                  </ul>
+                  <div class="cases__item-info">
+                    <h5 class="cases__item-name">Israel TV</h5>
+                    <ul class="tag__list">
+                      <li class="tag__item p-3">6+ months</li>
+                      <li class="tag__item p-3">TV Broadcasting</li>
+                      <li class="tag__item p-3">CRM</li>
+                      <li class="tag__item p-3">TV App</li>
+                      <li class="tag__item p-3">Web Design</li>
+                      <li class="tag__item p-3">Mobile App</li>
+                      <li class="tag__item p-3">Redesign</li>
+                    </ul>
+                  </div>
                 </div>
               </li>
             </ul>
