--- a/src/services.html
+++ b/src/services.html
@@ -274,12 +274,12 @@
                         </li>
                       </ul>
                       <div class="elem-action">
-                        <a href="#" class="btn btn_secondary accordion__btn">
+                        <button class="btn btn_secondary accordion__btn">
                           <span class="btn__text">Let’s Talk</span>
                           <span class="btn__icon btn__icon-arrow">
                             <span class="icon-arrow-right"></span>
                           </span>
-                        </a>
+                        </button>
                       </div>
                     </div>
                   </div>
@@ -318,12 +318,12 @@
                         </li>
                       </ul>
                       <div class="elem-action">
-                        <a href="#" class="btn btn_secondary accordion__btn">
+                        <button class="btn btn_secondary accordion__btn">
                           <span class="btn__text">Let’s Talk</span>
                           <span class="btn__icon btn__icon-arrow">
                             <span class="icon-arrow-right"></span>
                           </span>
-                        </a>
+                        </button>
                       </div>
                     </div>
                   </div>
