--- a/src/services.html
+++ b/src/services.html
@@ -48,17 +48,25 @@
         <div class="container">
           <div class="statistics__content">
             <h4 class="statistics__title">Get an <mark>effective</mark> design for your project</h4>
-            <ul class="statistics__list">
+            <ul class="statistics__list" id="stats">
               <li class="statistics__item">
-                <h3>50+</h3>
+                <div class="statistics__item-line">
+                  <h3 class="stat-number" data-target="50">0</h3>
+                  <h3>+</h3>
+                </div>
                 <p class="p-2">Designed projects</p>
               </li>
               <li class="statistics__item">
-                <h3>30+</h3>
+                <div class="statistics__item-line">
+                  <h3 class="stat-number" data-target="30">0</h3>
+                  <h3>+</h3>
+                </div>
                 <p class="p-2">Effective redesigns</p>
               </li>
               <li class="statistics__item">
-                <h3>13</h3>
+                <div class="statistics__item-line">
+                  <h3 class="stat-number" data-target="13">0</h3>
+                </div>
                 <p class="p-2">Successful audits</p>
               </li>
             </ul>
@@ -564,5 +572,51 @@
     <load src="./components/popup-mini.html" />
 
     <script type="module" src="js/main.js"></script>
+
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        const statsBlock = document.getElementById("stats");
+        const numbers = document.querySelectorAll(".stat-number");
+
+        const animateNumbers = (entries, observer) => {
+          entries.forEach((entry) => {
+            if (entry.isIntersecting) {
+              numbers.forEach((num) => {
+                const target = +num.getAttribute("data-target");
+                const duration = 2000;
+                const increment = target / (duration / 16);
+
+                let current = 0;
+
+                const updateNumber = () => {
+                  current += increment;
+                  if (current >= target) {
+                    num.textContent = target;
+                    return;
+                  }
+                  num.textContent = Math.round(current);
+                  requestAnimationFrame(updateNumber);
+                };
+
+                num.classList.add("animation");
+                num.addEventListener("animationend", () => {
+                  num.classList.remove("animation");
+                });
+
+                updateNumber();
+              });
+
+              observer.unobserve(statsBlock);
+            }
+          });
+        };
+
+        const observer = new IntersectionObserver(animateNumbers, {
+          threshold: 0,
+        });
+
+        observer.observe(statsBlock);
+      });
+    </script>
   </body>
 </html>
