--- a/src/contact-us.html
+++ b/src/contact-us.html
@@ -52,11 +52,11 @@
                     <span class="social__icon icon-behance"></span>
                   </a>
                 </li>
-                <li class="social__item">
-                  <a href="https://facebook.com" class="social__link">
-                    <span class="social__icon icon-facebook"></span>
-                  </a>
-                </li>
+                <!--                <li class="social__item">-->
+                <!--                  <a href="https://facebook.com" class="social__link">-->
+                <!--                    <span class="social__icon icon-facebook"></span>-->
+                <!--                  </a>-->
+                <!--                </li>-->
                 <li class="social__item">
                   <a href="https://linkedin.com" class="social__link">
                     <span class="social__icon icon-linkedin"></span>
@@ -157,7 +157,15 @@
                       <span class="p-2">I want to protect my data by signing an NDA.</span>
                     </label>
                   </div>
-                  <span class="icon-info"></span>
+                  <div class="tooltip__container">
+                    <span class="icon-info"></span>
+                    <div class="tooltip">
+                      <span class="p-4"
+                        >Before we discuss any details about your project you can request to sign a Non Disclosure
+                        Agreement</span
+                      >
+                    </div>
+                  </div>
                 </div>
 
                 <span class="p-4 form__empty-error" id="empty-error" aria-live="assertive"></span>
@@ -176,9 +184,9 @@
                     </label>
                     <input type="file" id="file-upload" name="files" style="display: none" multiple />
                   </div>
-                  <span class="p-4"
+                  <span class="p-5"
                     >*No more than 3 files may be attached up to 30 MB each. Formats doc, docx, pdf, ppt, pptx, xlsx,
-                    zip, rar. .</span
+                    zip, rar.</span
                   >
                 </div>
               </form>
@@ -205,7 +213,6 @@
 
     <script type="module">
       import intlTelInput from "intl-tel-input";
-      import emailjs from "@emailjs/browser";
 
       document.addEventListener("DOMContentLoaded", () => {
         const form = document.querySelector(".order-form");
@@ -251,8 +258,7 @@
 
         const updateCounter = () => {
           const inputValue = textarea.value;
-          const validChars = inputValue.split("");
-          const validLength = validChars.length;
+          const validLength = inputValue.length;
 
           counter.textContent = `${validLength}/${maxLength}`;
           if (validLength > maxLength) {
@@ -309,6 +315,7 @@
             deleteButton.addEventListener("click", () => {
               listItem.remove();
               uploadedFiles.delete(file.name);
+              fileInput.value = "";
               errorContainer.textContent = "";
               newFilesCount--;
             });
@@ -349,45 +356,38 @@
           event.target.classList.add("selected");
         };
 
-        form.addEventListener("submit", (e) => {
+        form.addEventListener("submit", async (e) => {
           e.preventDefault();
 
           if (validateForm()) {
             errorContainer.textContent = "";
             const formData = new FormData(form);
 
-            emailjs.init("lLSKvVcx1LQ3lQ7Qy");
+            // Добавляем выбранный бюджет
+            const budgetElement = document.querySelector(".budget-option.selected");
+            if (budgetElement) {
+              formData.append("user-budget", budgetElement.dataset.value);
+            }
 
-            const data = {
-              user_name: formData.get("user-name"),
-              user_email: formData.get("user-email"),
-              user_phone: formData.get("user-phone"),
-              user_comment: formData.get("user-comment"),
-              project_budget:
-                document.querySelector(".budget-option.selected")?.getAttribute("data-value") || "Not specified",
-              user_nda: formData.get("user-nda") ? "Yes" : "No",
-            };
+            try {
+              const response = await fetch("form.php", {
+                method: "POST",
+                body: formData,
+              });
 
-            emailjs
-              .send("service_d3x1f1d", "template_9nakrge", data)
-              .then(() => {
-                const popup = document.getElementById("popup-mini");
-                popup.classList.remove("hide");
-                popup.classList.add("is-open");
-
-                popup.querySelector(".popup-mini__close-btn").addEventListener("click", () => {
-                  popup.classList.remove("is-open");
-                  popup.classList.add("hide");
-                });
+              if (response.ok) {
+                alert("Your request has been successfully sent!");
                 form.reset();
                 fileList.innerHTML = "";
                 budgetOptions.forEach((option) => option.classList.remove("selected"));
                 uploadedFiles.clear();
-              })
-              .catch((error) => {
-                console.error("Error submitting form:", error);
-                alert("There was an error submitting the form.");
-              });
+              } else {
+                throw new Error("Failed to send the request.");
+              }
+            } catch (error) {
+              console.error("Error submitting form:", error);
+              alert("There was an error submitting the form.");
+            }
           } else {
             errorContainer.textContent = "Please fix the errors above before submitting.";
           }
