--- a/src/contact-us.html
+++ b/src/contact-us.html
@@ -36,19 +36,19 @@
                   <span id="phone-copy" class="icon-copy icon_primary" onclick="copyPhoneNumber()"></span>
                 </li>
               </ul>
-              <a href="#" class="btn btn_primary-green btn_meeting">
+              <a href="https://calendly.com/hello-mfisher" target="_blank" class="btn btn_primary-green btn_meeting">
                 <span class="btn__icon icon-calendar"> </span>
                 <span class="btn__text">Schedule a Meeting</span>
               </a>
 
               <ul class="social__list">
                 <li class="social__item">
-                  <a href="https://dribbble.com" class="social__link">
+                  <a href="https://dribbble.com/m_fisher" target="_blank" class="social__link">
                     <span class="social__icon icon-dribbble"></span>
                   </a>
                 </li>
                 <li class="social__item">
-                  <a href="https://behance.com" class="social__link">
+                  <a href="https://www.behance.net/mfisher_agency" target="_blank" class="social__link">
                     <span class="social__icon icon-behance"></span>
                   </a>
                 </li>
@@ -372,14 +372,13 @@
             errorContainer.textContent = "";
             const formData = new FormData(form);
 
-            // Добавляем выбранный бюджет
             const budgetElement = document.querySelector(".budget-option.selected");
             if (budgetElement) {
               formData.append("user-budget", budgetElement.dataset.value);
             }
 
             try {
-              const response = await fetch("form.php", {
+              const response = await fetch("https://mfisher.agency/send-email.php", {
                 method: "POST",
                 body: formData,
               });
