--- a/src/about.html
+++ b/src/about.html
@@ -78,71 +78,71 @@
         </div>
       </section>
 
-      <section class="founders">
-        <div class="container">
-          <div class="founders__content">
-            <h2 class="founders__title">Our founders</h2>
-            <p class="founders__description p-1">
-              We craft clear and efficient solutions designed to help you navigate challenges and reach your objectives
-              with ease.
-            </p>
-            <ul class="founders__list">
-              <li class="founders__item">
-                <div class="founders__img">
-                  <picture>
-                    <source media="(min-width: 1280px)" srcset="./assets/img/about/f-1-d.png" />
-                    <source media="(min-width: 768px)" srcset="./assets/img/about/f-1-t.png" />
-                    <source media="(min-width: 320px)" srcset="./assets/img/about/f-1.png" />
-                    <img src="./assets/img/about/f-1.png" alt="founder" />
-                  </picture>
-                </div>
-                <div class="founders__info">
-                  <h5 class="founders__name">Andrii Sementsov</h5>
-                  <p class="p-1 founders__position">CEO</p>
-                  <p class="p-2 founders__text">
-                    Every challenge is an opportunity to push boundaries, create impact, and shape the future of digital
-                    design.
-                  </p>
-                  <ul class="founders__item-links">
-                    <li>
-                      <a href="#"><span class="icon icon-linkedin"></span></a>
-                    </li>
-                    <li>
-                      <a href="#"><span class="icon icon-whatsapp"></span></a>
-                    </li>
-                  </ul>
-                </div>
-              </li>
-              <li class="founders__item">
-                <div class="founders__img">
-                  <picture>
-                    <source media="(min-width: 1280px)" srcset="./assets/img/about/f-2-d.png" />
-                    <source media="(min-width: 768px)" srcset="./assets/img/about/f-2-t.png" />
-                    <source media="(min-width: 320px)" srcset="./assets/img/about/f-2.png" />
-                    <img src="./assets/img/about/f-2.png" alt="founder" />
-                  </picture>
-                </div>
-                <div class="founders__info">
-                  <h5 class="founders__name">Mariia Sementsova</h5>
-                  <p class="founders__position p-1">Head of UI/UX Department</p>
-                  <p class="founders__text p-2">
-                    Design is more than aesthetics - it's about creating meaningful experiences that connect users to
-                    brands.
-                  </p>
-                  <ul class="founders__item-links">
-                    <li>
-                      <a href="#"><span class="icon icon-linkedin"></span></a>
-                    </li>
-                    <li>
-                      <a href="#"><span class="icon icon-whatsapp"></span></a>
-                    </li>
-                  </ul>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </section>
+      <!--      <section class="founders">-->
+      <!--        <div class="container">-->
+      <!--          <div class="founders__content">-->
+      <!--            <h2 class="founders__title">Our founders</h2>-->
+      <!--            <p class="founders__description p-1">-->
+      <!--              We craft clear and efficient solutions designed to help you navigate challenges and reach your objectives-->
+      <!--              with ease.-->
+      <!--            </p>-->
+      <!--            <ul class="founders__list">-->
+      <!--              <li class="founders__item">-->
+      <!--                <div class="founders__img">-->
+      <!--                  <picture>-->
+      <!--                    <source media="(min-width: 1280px)" srcset="./assets/img/about/f-1-d.png" />-->
+      <!--                    <source media="(min-width: 768px)" srcset="./assets/img/about/f-1-t.png" />-->
+      <!--                    <source media="(min-width: 320px)" srcset="./assets/img/about/f-1.png" />-->
+      <!--                    <img src="./assets/img/about/f-1.png" alt="founder" />-->
+      <!--                  </picture>-->
+      <!--                </div>-->
+      <!--                <div class="founders__info">-->
+      <!--                  <h5 class="founders__name">Andrii Sementsov</h5>-->
+      <!--                  <p class="p-1 founders__position">CEO</p>-->
+      <!--                  <p class="p-2 founders__text">-->
+      <!--                    Every challenge is an opportunity to push boundaries, create impact, and shape the future of digital-->
+      <!--                    design.-->
+      <!--                  </p>-->
+      <!--                  <ul class="founders__item-links">-->
+      <!--                    <li>-->
+      <!--                      <a href="#"><span class="icon icon-linkedin"></span></a>-->
+      <!--                    </li>-->
+      <!--                    <li>-->
+      <!--                      <a href="#"><span class="icon icon-whatsapp"></span></a>-->
+      <!--                    </li>-->
+      <!--                  </ul>-->
+      <!--                </div>-->
+      <!--              </li>-->
+      <!--              <li class="founders__item">-->
+      <!--                <div class="founders__img">-->
+      <!--                  <picture>-->
+      <!--                    <source media="(min-width: 1280px)" srcset="./assets/img/about/f-2-d.png" />-->
+      <!--                    <source media="(min-width: 768px)" srcset="./assets/img/about/f-2-t.png" />-->
+      <!--                    <source media="(min-width: 320px)" srcset="./assets/img/about/f-2.png" />-->
+      <!--                    <img src="./assets/img/about/f-2.png" alt="founder" />-->
+      <!--                  </picture>-->
+      <!--                </div>-->
+      <!--                <div class="founders__info">-->
+      <!--                  <h5 class="founders__name">Mariia Sementsova</h5>-->
+      <!--                  <p class="founders__position p-1">Head of UI/UX Department</p>-->
+      <!--                  <p class="founders__text p-2">-->
+      <!--                    Design is more than aesthetics - it's about creating meaningful experiences that connect users to-->
+      <!--                    brands.-->
+      <!--                  </p>-->
+      <!--                  <ul class="founders__item-links">-->
+      <!--                    <li>-->
+      <!--                      <a href="#"><span class="icon icon-linkedin"></span></a>-->
+      <!--                    </li>-->
+      <!--                    <li>-->
+      <!--                      <a href="#"><span class="icon icon-whatsapp"></span></a>-->
+      <!--                    </li>-->
+      <!--                  </ul>-->
+      <!--                </div>-->
+      <!--              </li>-->
+      <!--            </ul>-->
+      <!--          </div>-->
+      <!--        </div>-->
+      <!--      </section>-->
 
       <section class="values">
         <div class="container">
@@ -258,7 +258,7 @@
             <h2 class="cta__title">Unlock the <span class="text-color">Power</span> of Imagination!</h2>
             <p class="cta__description p-1">We’re here to turn your boldest concepts into stunning digital designs.</p>
             <div class="section__action cta__action">
-              <a href="#" class="btn btn_primary-green">
+              <a href="https://calendly.com/hello-mfisher" target="_blank" class="btn btn_primary-green">
                 <span class="btn__icon icon-calendar"></span>
                 <span class="btn__text">Schedule a Meeting</span>
               </a>
